freest/test/prog/Invalid/Kinding/KindMismatchMore/KindMismatchMore.fst
module KindMismatchMore where

type Bad : *T -> *T
type Bad = Int
